ci(spack): checkout tag

--- a/.github/workflows/arm64-auto.yml
+++ b/.github/workflows/arm64-auto.yml
@@ -1,8 +1,8 @@
-name: arm64 auto hdf4
+name: arm64 auto
 
 on:
   push:
-    branches: main-
+    branches: [develop]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -18,10 +18,10 @@ jobs:
             host: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.1
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.25.0
+        uses: cross-platform-actions/action@v0.23.0
         env:
           FOO: A
           BAR: B
@@ -32,16 +32,14 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkg_add git
             sudo pkg_add autoconf-2.71
             sudo pkg_add automake-1.16.5
             sudo pkg_add libtool-2.4.2p2
-            sudo pkg_add jpeg	    
-            git clone https://github.com/HDFGroup/hdf4
-            cd hdf4
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
+            ls /usr/local/bin/
+            export HDF5_LIBTOOL=/usr/local/bin/libtoolize
             ./autogen.sh
-            ./configure --with-jpeg=/usr/local
+            ./configure
             make
             make check
