--- a/.github/workflows/fbsd-auto-ompi.yml
+++ b/.github/workflows/fbsd-auto-ompi.yml
@@ -2,7 +2,7 @@ name: fbsd auto ompi
 
 on:
   push:
-    branches: main-
+    branches: develop-
 
 jobs:
   test:
@@ -18,8 +18,6 @@ jobs:
             host: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          repository: HDFGroup/hdf5
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@v0.25.0
         with:
@@ -29,13 +27,8 @@ jobs:
           shell: bash
           run: |
             sudo pkg install -y autoconf automake libtool openmpi
-            sudo hostname localhost
-            export NPROCS=2
             ./autogen.sh
-            /usr/local/mpi/openmpi/bin/mpicc --version
-            export PATH=/usr/local/mpi/openmpi/bin:$PATH
-            export LD_LIBRARY_PATH=/usr/local/mpi/openmpi/lib:$LD_LIBRARY_PATH
-            ./configure --prefix=/tmp --enable-build-mode=production --enable-parallel --enable-shared CC=/usr/local/mpi/openmpi/bin/mpicc LDFLAGS="-L/usr/local/mpi/openmpi/lib"
+            ./configure CC=/usr/local/mpi/openmpi/bin/mpicc --prefix=/tmp --enable-build-mode=production --enable-parallel
             make
             make check
             make install
