--- a/.github/workflows/lin-auto-icx-d.yml
+++ b/.github/workflows/lin-auto-icx-d.yml
@@ -3,29 +3,36 @@ name: lin auto icx d
 on:
   push:
     branches:
-      - main-
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: install
+      - uses: actions/checkout@v4.1.1
+      - name: Install Dependencies
         run:  |
           sudo apt-get update
           sudo apt-get install autoconf automake libtool libtool-bin libaec-dev
+      - name: Add oneAPI to apt
+        shell: bash
+        run: |
           cd /tmp
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all main"
+
+      - name: Install oneAPI dpcpp
+        shell: bash
+        run: |
           sudo apt update
           sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
-      - name: test
+
+      - name: Test
         shell: bash
         run: |
           source /opt/intel/oneapi/setvars.sh
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-          tar zxvf snapshot-1.14.5.tar.gz
-          cd hdf5-1.14.5-2
+          ./autogen.sh
           ./configure --prefix=/tmp --enable-internal-debug=all CC="$(which icx)"
           make -j
           make check -j
