--- a/.github/workflows/lin-auto-icx.yml
+++ b/.github/workflows/lin-auto-icx.yml
@@ -3,31 +3,51 @@ name: lin auto icx
 on:
   push:
     branches:
-      - main-
+      - develop-
+
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: install
+      - uses: actions/checkout@v4.1.1
+      - name: Install Dependencies
         run:  |
           sudo apt-get update
           sudo apt-get install autoconf automake libtool libtool-bin libaec-dev
+      - name: Add oneAPI to apt
+        shell: bash
+        run: |
           cd /tmp
           wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
           sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all main"
+      
+      - name: Install oneAPI dpcpp and fortran compiler
+        shell: bash
+        run: |
           sudo apt update
           sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
-      - name: test
+          sudo apt install -y intel-oneapi-compiler-fortran
+          sudo apt install -y intel-oneapi-mpi-devel
+
+      - name: Install oneAPI MKL library
+        shell: bash
+        run: |
+          sudo apt install -y intel-oneapi-mkl-devel
+
+      - name: Test parallel
         shell: bash
         run: |
           source /opt/intel/oneapi/setvars.sh
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-          tar zxvf snapshot-1.14.5.tar.gz
-          cd hdf5-1.14.5-2	  
-          ./configure --prefix=/tmp CC="$(which icx)" --enable-build-mode=production
+          export PATH=$PATH:/opt/intel/oneapi/mpi/latest/bin:/opt/intel/oneapi/compiler/latest/bin
+          ./autogen.sh
+          ./configure  --disable-fortran --disable-parallel CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicx) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/latest/lib"
           make -j
-          make check -j
-          make install
-          make uninstall
+          export SYCL_DEVICE_FILTER=opencl.cpu
+          make check -j 
+          sudo make install
+          sudo make uninstall
