--- a/.github/workflows/win-vcpkg-hdf5-5182.yml
+++ b/.github/workflows/win-vcpkg-hdf5-5182.yml
@@ -24,9 +24,11 @@ jobs:
         run: |
           mkdir build
           cd build
+          vcpkg integrate install
           set libaec_ROOT="C:/vcpkg/packages/libaec_x64-windows"
+          set libaec_DIR="C:/vcpkg/packages/libaec_x64-windows"	  
           set
           dir "C:/vcpkg/packages/libaec_x64-windows"
-          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" -DBUILDNAME:STRING="6/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  ..
+          cmake -G "Visual Studio 17 2022" -A x64 -DSITE:STRING=win-22 -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" -DBUILDNAME:STRING="6/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5"  ..
           ctest -D Experimental -C Release
         shell: cmd
