--- a/.github/workflows/lin-auto-jl.yml
+++ b/.github/workflows/lin-auto-jl.yml
@@ -1,6 +1,11 @@
 name: lin auto jl
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main- ]
+  pull_request:
+    branches: [ main- ]
+  workflow_dispatch:
 
 jobs:
   julia:
