--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -14,6 +14,21 @@ jobs:
         with:
           repository: HDFGroup/hdf5
           ref: hdf5_1_14_6
-      - name: install
+      - name: set repo
         run: |
           more /etc/redhat-release
+          tee > /tmp/oneAPI.repo << EOF
+[oneAPI]
+name=Intel® oneAPI repository
+baseurl=https://yum.repos.intel.com/oneapi
+enabled=1
+gpgcheck=1
+repo_gpgcheck=1
+gpgkey=https://yum.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
+EOF
+      - name: install oneapi
+        run: |
+          sudo mv /tmp/oneAPI.repo /etc/yum.repos.d
+          sudo dnf install intel-oneapi-base-toolkit
+
+# https://www.intel.com/content/www/us/en/docs/oneapi/installation-guide-linux/2025-0/yum-dnf-001.html#BASE-YUM-DNF
