ci: install libaec-dev

--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -24,5 +24,8 @@ jobs:
       - name: install oneapi
         run: |
           dnf install -y intel-oneapi-base-toolkit-2025.0.0-884
+      - name: install dependencies
+        run: |
+          dnf install -y zlib-dev libaec-dev
 
 # https://www.intel.com/content/www/us/en/docs/oneapi/installation-guide-linux/2025-0/yum-dnf-001.html#BASE-YUM-DNF
