ci(rh8): list packages

--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -26,6 +26,7 @@ jobs:
           dnf install -y intel-oneapi-base-toolkit-2025.0.0-884
       - name: install dependencies
         run: |
-          dnf install -y libzlib-devel libaec-devel
+          dnf list zlib
+          dnf list libaec
 
 # https://www.intel.com/content/www/us/en/docs/oneapi/installation-guide-linux/2025-0/yum-dnf-001.html#BASE-YUM-DNF
