--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -19,7 +19,7 @@ jobs:
           path: ./hdf5
       - name: install dependencies
         run: |
-          dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+          dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
           dnf update
           dnf list zlib
           dnf list libaec
