--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -30,6 +30,9 @@ jobs:
           dnf install -y intel-oneapi-base-toolkit-2025.0.0-884
       - name: build hdf5
         run: |
+          ls /opt/intel/oneapi
+          source /opt/intel/oneapi/setvars.sh
+          export PATH=$PATH:/opt/intel/oneapi/mpi/latest/bin:/opt/intel/oneapi/compiler/latest/bin
           cd hdf5
           mkdir build
           cd build
