ci: install procps-ng

--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           dnf install -y zlib
           dnf install -y libaec
+          dnf install -y procps-ng
       - name: set repo
         run: |
           more /etc/redhat-release
