--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -19,9 +19,10 @@ jobs:
           path: ./hdf5
       - name: install dependencies
         run: |
-          dnf install -y zlib
+          dnf install -y cmake
           dnf install -y libaec
           dnf install -y procps-ng
+          dnf install -y zlib
       - name: set repo
         run: |
           more /etc/redhat-release
