ci(rh8): find package

--- a/.github/workflows/rh8-libaec.yml
+++ b/.github/workflows/rh8-libaec.yml
@@ -12,3 +12,4 @@ jobs:
       - name: install dependencies
         run: |
           dnf install -y libaec-devel
+          find / -name 'libaec*.cmake'
