ci(rh9): test libaec

--- a/.github/workflows/rh9-libaec.yml
+++ b/.github/workflows/rh9-libaec.yml
@@ -1,13 +1,13 @@
-name: ubi10 libaec
+name: ubi9 libaec
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: "redhat/ubi10:latest"
+    container: "redhat/ubi9:latest"
     steps:
       - name: install dependencies
         run: |
