ci(rh9): no devel

--- a/.github/workflows/rh9-libaec.yml
+++ b/.github/workflows/rh9-libaec.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - name: install dependencies
         run: |
-          dnf install -y libaec-devel
+          dnf install -y libaec
           find / -name 'libaec*.cmake'
