--- a/.github/workflows/rh8-icc.yml
+++ b/.github/workflows/rh8-icc.yml
@@ -37,13 +37,13 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          cmake -G "Unix Makefiles" --log-level=VERBOSE --fresh \
+          cmake --log-level=VERBOSE --fresh \
                 -DBUILD_SHARED_LIBS:BOOL=ON \
                 -DHDF5_ENABLE_PARALLEL:BOOL=ON \
                 -DCMAKE_C_COMPILER=`which mpicc` -DCMAKE_CXX_COMPILER=`which mpicxx` -DCMAKE_Fortran_COMPILER=`which mpifort` \
-                -DHDF5_PACKAGE_EXTLIBS:BOOL=ON \
-                -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=ON \
-                -DZLIB_USE_EXTERNAL:BOOL=OFF -DZLIB_LIBRARY:PATH="/usr/lib64/libz.so.1" -DZLIB_INCLUDE_DIR="/usr/include" \
-                -DSZIP_USE_EXTERNAL:BOOL=OFF -DSZIP_LIBRARY:PATH="/usr/lib64/libsz.so.2.0.1" -DSZIP_INCLUDE_DIR="/usr/include" \
+                -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON \
+                -DSITE:STRING=rh8 -DBUILDNAME:STRING="hk/r/icx/ae+zl/p" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
                 ..
+                ctest -D Experimental -C Release
+          
 # https://www.intel.com/content/www/us/en/docs/oneapi/installation-guide-linux/2025-0/yum-dnf-001.html#BASE-YUM-DNF
