--- a/.github/workflows/spack-iowarp.yml
+++ b/.github/workflows/spack-iowarp.yml
@@ -2,9 +2,7 @@ name: spack iowarp
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ main- ]
   workflow_dispatch:
 
 jobs:
