--- a/.github/workflows/mac13-omp.yml
+++ b/.github/workflows/mac13-omp.yml
@@ -13,6 +13,8 @@ jobs:
         run: |
           brew install libomp
           ls /usr/local/include/
+          find / -name 'omp.h'
+          
 
 
 
