--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -21,15 +21,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: HDFGroup/hdf5
-      - name: libaec
-        run: |
-          vcpkg install libaec
-      - name: zlib
-        run: |
-          vcpkg install zlib
-      - name: integrate
-        run: |
-          vcpkg integrate install
       - name: vars
         shell: cmd
         run: |
@@ -39,5 +30,5 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -G Ninja -DCMAKE_TOOLCHAIN_FILE="C:/vcpkg/scripts/buildsystems/vcpkg.cmake" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_PARALLEL:BOOL=ON -DMPIEXEC_EXECUTABLE:FILEPATH="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.14\bin\mpiexec.exe" -DMPI_C_HEADER_DIR:PATH="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.14\include" -DCTEST_DROP_SITE_INIT=my.cdash.org -DSITE="win-22" -DBUILDNAME="ninja/r/icx/f/ae+zl/p" ..
+          cmake -G Ninja -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DHDF5_ENABLE_PARALLEL:BOOL=ON -DMPIEXEC_EXECUTABLE:FILEPATH="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.14\bin\mpiexec.exe" -DMPI_C_HEADER_DIR:PATH="C:\Program Files (x86)\Intel\oneAPI\mpi\2021.14\include" -DCTEST_DROP_SITE_INIT=my.cdash.org -DSITE="win-22" -DBUILDNAME="ninja/r/icx/f/p" ..
           ctest -D Experimental -C Release      
