--- a/.github/workflows/mac15-docker.yml
+++ b/.github/workflows/mac15-docker.yml
@@ -10,4 +10,7 @@ jobs:
     runs-on: macos-15
     steps:
       - name: install
-        run: brew install docker
+        run: |
+          brew install docker
+          docker version
+          docker model status
