ci(mac): use colima

--- a/.github/workflows/mac15-docker.yml
+++ b/.github/workflows/mac15-docker.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: install
         run: |
-          brew install docker
+          brew install colima
+          colima start
           docker version
           docker model status
