ci(mac): brew services start colima

--- a/.github/workflows/mac15-docker.yml
+++ b/.github/workflows/mac15-docker.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: install
         run: |
+          brew install docker
           brew install colima
-          colima start
+          brew services start colima
           docker version
           docker model status
