--- a/.github/workflows/mac15-docker.yml
+++ b/.github/workflows/mac15-docker.yml
@@ -13,6 +13,7 @@ jobs:
         run: |
           brew install docker
           brew install colima
-          brew services start colima
+          colima start --vm-type=vz
           docker version
           docker model status
+#           brew services start colima
