--- a/.github/workflows/mac15-docker.yml
+++ b/.github/workflows/mac15-docker.yml
@@ -13,7 +13,8 @@ jobs:
         run: |
           brew install docker
           brew install colima
-          colima start --vm-type=vz
+          colima start -f
           docker version
           docker model status
 #           brew services start colima
+#          colima start --vm-type=vz
