test(lin,vcpkg): mapnik

--- a/.github/workflows/lin-vcpkg-vtk.yml
+++ b/.github/workflows/lin-vcpkg-vtk.yml
@@ -18,4 +18,5 @@ jobs:
           ./vcpkg/bootstrap-vcpkg.sh
           cd vcpkg
           ./vcpkg install gdal[core,hdf5]
-          ./vcpkg install vtk[core,gdal]
+          ./vcpkg install mapnik[core,input-gdal]
+#          ./vcpkg install gz-common[core,gdal]
