--- a/.github/workflows/lin-vcpkg-vtk.yml
+++ b/.github/workflows/lin-vcpkg-vtk.yml
@@ -12,11 +12,13 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
+          sudo apt install -y nasm
       - name: Install vcpkg
         run: |
           git clone --branch 2025.03.19 --single-branch https://github.com/microsoft/vcpkg
           ./vcpkg/bootstrap-vcpkg.sh
           cd vcpkg
           ./vcpkg install gdal[core,hdf5]
-          ./vcpkg install gz-common[core]
+          ./vcpkg install pdal
+#          ./vcpkg install gz-common[core]
 #          ./vcpkg install mapnik[core,input-gdal]
