--- a/.github/workflows/fbsd-fl.yml
+++ b/.github/workflows/fbsd-fl.yml
@@ -17,6 +17,11 @@ jobs:
             version: '14.0'
             host: ubuntu-latest
     steps:
+      - name: checkout hdf5
+        uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5
+    
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@v0.25.0
         with:
@@ -29,9 +34,6 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y lfortran
             export FC=lfortran
-            curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-            tar zxvf snapshot-1.14.5.tar.gz
-            cd hdf5-1.14.5-2
             mkdir build
             cd build
             cmake \
