ci(fbsd,fl): git clone hdf5

--- a/.github/workflows/fbsd-fl.yml
+++ b/.github/workflows/fbsd-fl.yml
@@ -17,11 +17,6 @@ jobs:
             version: '14.0'
             host: ubuntu-latest
     steps:
-      - name: checkout hdf5
-        uses: actions/checkout@v4
-        with:
-          repository: HDFGroup/hdf5
-    
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@v0.25.0
         with:
@@ -33,7 +28,10 @@ jobs:
             sudo pkg install -y perl5
             sudo pkg install -y cmake
             sudo pkg install -y lfortran
+            sudo pkg install -y git
             export FC=lfortran
+            git clone https://github.com/HDFGroup/hdf5
+            cd hdf5
             mkdir build
             cd build
             cmake \
