ci(fbsd,lf): -no-pie

--- a/.github/workflows/fbsd-lf.yml
+++ b/.github/workflows/fbsd-lf.yml
@@ -35,7 +35,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DCMAKE_Fortran_FLAGS="--backend=llvm -fPIC  -fno-pie" \
+            -DCMAKE_Fortran_FLAGS="--backend=llvm -fPIC  -no-pie" \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DSITE:STRING=fbsd14 \
             -DBUILDNAME:STRING="5/r/f" \
