--- a/.github/workflows/fbsd-lf.yml
+++ b/.github/workflows/fbsd-lf.yml
@@ -2,7 +2,7 @@ name: fbsd lf
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test:
@@ -35,7 +35,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DCMAKE_Fortran_FLAGS="--backend=llvm -fPIC  -no-pie" \
+            -DCMAKE_Fortran_FLAGS="--backend=llvm -fPIC" \
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DSITE:STRING=fbsd14 \
             -DBUILDNAME:STRING="5/r/f" \
