ci(mac-13, flang): fix yml

--- a/.github/workflows/mac13-fl.yml
+++ b/.github/workflows/mac13-fl.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           repository: HDFGroup/hdf5
       - name: test
+        run: |
           export FC=/usr/local/bin/flang-new
           mkdir build
           cd build
