--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -2,7 +2,7 @@ name: mac-15 flang
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   build:
@@ -18,7 +18,7 @@ jobs:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          export FC=/opt/brew/bin/flang-new
+          export FC=/opt/homebrew/bin/flang-new
           mkdir build
           cd build
           cmake -G Ninja \
