--- a/.github/workflows/mac14-fl.yml
+++ b/.github/workflows/mac14-fl.yml
@@ -27,5 +27,6 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
+            -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE:BOOL=OFF \
             ..
           ctest -D Experimental
