--- a/.github/workflows/mac14-fl.yml
+++ b/.github/workflows/mac14-fl.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - name: install
         run: |
-          brew install ninja
+          brew outdated
+          brew upgrade
+          brew cleanup
           brew install flang
       - name: checkout
         uses: actions/checkout@v4
