--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - name: install
         run: |
-          brew install ninja
+          brew outdated
+          brew upgrade
+          brew cleanup
           brew install flang
       - name: checkout
         uses: actions/checkout@v4
@@ -18,7 +20,7 @@ jobs:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          export FC=/opt/homebrew/bin/flang
+          export FC=/opt/homebrew/bin/flang-new
           mkdir build
           cd build
           cmake -G Ninja \
