--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -13,7 +13,7 @@ jobs:
           brew outdated
           brew upgrade
           brew cleanup
-          brew install flang
+          brew install flang@20.1.2
       - name: checkout
         uses: actions/checkout@v4
         with:
