--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           brew update
           brew info flang
-          brew install flang@20.1.2
+          brew install flang
       - name: checkout
         uses: actions/checkout@v4
         with:
