ci(mac-15): use 20

--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -20,7 +20,7 @@ jobs:
       - name: test
         run: |
           ls /opt/homebrew/bin/flang*
-          export FC=/opt/homebrew/bin/flang-new
+          export FC=/opt/homebrew/bin/flang
           mkdir build
           cd build
           cmake -G Ninja \
@@ -29,6 +29,5 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
-            -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=ON \
             ..
-#          ctest -D Experimental
+          ctest -D Experimental
