ci(mac-15): H5_FORTRAN_HAVE_C_LONG_DOUBL:BOOL=OFF

--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -29,5 +29,6 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
+            -DH5_FORTRAN_HAVE_C_LONG_DOUBL:BOOL=OFF \
             ..
           ctest -D Experimental
