--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -29,6 +29,7 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
-            -DH5_FORTRAN_HAVE_C_LONG_DOUBLE:BOOL=OFF \
+            -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=OFF \
+            -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=OFF \
             ..
           ctest -D Experimental
