--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -13,16 +13,16 @@ jobs:
           brew update
           brew info flang
           brew install flang
+          ls /opt/homebrew/bin/*lang*
+          find /opt/homebrew -name 'clang'
       - name: checkout
         uses: actions/checkout@v4
         with:
           repository: HDFGroup/hdf5
       - name: test
         run: |
-          ls /opt/homebrew/bin/*lang*
-          ls /opt/homebrew/opt/llvm/*lang*
           export FC=/opt/homebrew/bin/flang-20
-          export CC=/opt/homebrew/opt/llvm/bin/clang
+          export CC=/opt/homebrew/llvm/bin/clang
           mkdir build
           cd build
           cmake -G Ninja \
