ci(mac-15): adjust path

--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -13,8 +13,8 @@ jobs:
           brew update
           brew info flang
           brew install flang
-          ls /opt/homebrew/bin/*lang*
-          find /opt/homebrew -name 'clang'
+#          ls /opt/homebrew/bin/*lang*
+#          find /opt/homebrew -name 'clang'
       - name: checkout
         uses: actions/checkout@v4
         with:
@@ -22,7 +22,8 @@ jobs:
       - name: test
         run: |
           export FC=/opt/homebrew/bin/flang-20
-          export CC=/opt/homebrew/llvm/bin/clang
+          export CC=/opt/homebrew/Cellar/llvm/20.1.2/bin/clang
+          export CXX=/opt/homebrew/Cellar/llvm/20.1.2/bin/clang++
           mkdir build
           cd build
           cmake -G Ninja \
@@ -34,4 +35,4 @@ jobs:
             -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=0 \
             -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=0 \
             ..
-#          ctest -D Experimental
+          ctest -D Experimental
