--- a/.github/workflows/mac15-th.yml
+++ b/.github/workflows/mac15-th.yml
@@ -11,7 +11,8 @@ jobs:
       - name: install
         run: |
           brew update
-          brew install gfortran openmpi ninja
+          brew install openmpi
+      - uses: lukka/get-cmake@latest
       - name: checkout
         uses: actions/checkout@v4
         with:
@@ -26,7 +27,7 @@ jobs:
             -DBUILDNAME:STRING="ninja/o4/+f+j/+ompi+np=4/+h+sf+tv" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DBUILD_SHARED_LIBS=ON \
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_TOOLCHAIN_FILE=config/toolchain/clang.cmake \
