ci(arm64,lin): test mine

--- a/.github/workflows/arm64-lin-p.yml
+++ b/.github/workflows/arm64-lin-p.yml
@@ -11,7 +11,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5
+          repository: hyoklee/hdf5
       - name: install
         run:  |
           sudo apt-get update
