--- a/.github/workflows/lin-icx-sh-f-p-h-sz.yml
+++ b/.github/workflows/lin-icx-sh-f-p-h-sz.yml
@@ -38,6 +38,7 @@ jobs:
           -DHDF5_BUILD_HL_LIB=ON \
           -DMKL_ROOT="/opt/intel/oneapi/mkl/latest" \
           -DTBB_ROOT="/opt/intel/oneapi/tbb/latest" \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
           -DSZIP_LIBRARY:PATH="/usr/lib64/libsz.a" \
           -DSZIP_INCLUDE_DIR="/usr/include" \
            ..
