--- a/.github/workflows/lin-icx-sh-f-p-h-sz.yml
+++ b/.github/workflows/lin-icx-sh-f-p-h-sz.yml
@@ -31,15 +31,14 @@ jobs:
         run: |
           mkdir build
           cd build
+          ls /usr/lib64/libsz*
           cmake -DSITE:STRING="ubu" -DBUILDNAME:STRING="hk/icx/-sh/f/p/h/sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DBUILD_SHARED_LIBS:BOOL=OFF \
           -DHDF5_BUILD_HL_LIB=ON \
-          -DMKL_ROOT="/opt/intel/oneapi/mkl/latest" \
-          -DTBB_ROOT="/opt/intel/oneapi/tbb/latest" \
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
           -DSZIP_LIBRARY:PATH="/usr/lib64/libsz.a" \
           -DSZIP_INCLUDE_DIR="/usr/include" \
            ..
-          ctest -D Experimental -C Release
+#          ctest -D Experimental -C Release
