--- a/.github/workflows/lin-icx-sh-f-p-h-sz.yml
+++ b/.github/workflows/lin-icx-sh-f-p-h-sz.yml
@@ -30,13 +30,13 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING="ubu" -DBUILDNAME:STRING="hk/icx/-sh/f/p/h/sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          cmake -G Ninja -DSITE:STRING="ubu" -DBUILDNAME:STRING="hk/icx/-sh/f/p/h/sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DBUILD_SHARED_LIBS:BOOL=OFF \
           -DHDF5_BUILD_HL_LIB=ON \
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
-          -DSZIP_LIBRARY="sz aec" \
+          -DSZIP_LIBRARY="/usr/lib/x86_64-linux-gnu/libsz.a /usr/lib/x86_64-linux-gnu/libaec.a" \
           -DSZIP_INCLUDE_DIR="/usr/include" \
           ..
           ctest -D Experimental -C Release
