--- a/.github/workflows/lin-icx-sh-f-p-h-sz.yml
+++ b/.github/workflows/lin-icx-sh-f-p-h-sz.yml
@@ -1,4 +1,4 @@
-name: lin icx -sh f p h sz
+name: lin icx -sh f p h sz zl
 
 on:
   push:
@@ -30,11 +30,12 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake --log-level=Verbose -G Ninja -DSITE:STRING="ubu" -DBUILDNAME:STRING="hk/icx/-sh/f/p/h/sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
+          cmake --log-level=Verbose -G Ninja -DSITE:STRING="ubu" -DBUILDNAME:STRING="hk/icx/-sh/f/p/h/sz+zl" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
           -DHDF5_BUILD_FORTRAN=ON \
           -DHDF5_ENABLE_PARALLEL=ON \
           -DBUILD_SHARED_LIBS:BOOL=OFF \
           -DHDF5_BUILD_HL_LIB=ON \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
           -DSZIP_LIBRARY="/usr/lib/x86_64-linux-gnu/libsz.a;/usr/lib/x86_64-linux-gnu/libaec.a" \
           -DSZIP_INCLUDE_DIR="/usr/include" \
