--- a/.github/workflows/win19.yml
+++ b/.github/workflows/win19.yml
@@ -3,19 +3,18 @@ name: win19
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: windows-2019
     steps:
-      - name: get
-        run: |
-          curl -s -O -L  https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.zip
-          unzip -q snapshot-1.14.5.zip	
+      - name: checkout
+        uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5    
       - name: test
         run: |
-          cd  hdf5-1.14.5-2
           mkdir build
           cd build
-          cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING=win19 -DBUILDNAME:STRING="r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
