--- a/.github/workflows/lin-lmod.yml
+++ b/.github/workflows/lin-lmod.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test
-        shell: bash
         run: |
           sudo apt -y install lmod
+          eval "$(SHELL=/bin/bash module shinit bash)"
           which module
           module list
