--- a/.github/workflows/lin-lmod.yml
+++ b/.github/workflows/lin-lmod.yml
@@ -1,9 +1,9 @@
-name: lin modules
+name: lin spack module
 
 on:
   push:
     branches:
-      - main
+      - main-
 jobs:
   build:
     runs-on: ubuntu-latest
