--- a/.github/workflows/lin-lmod.yml
+++ b/.github/workflows/lin-lmod.yml
@@ -12,12 +12,4 @@ jobs:
       run: |
         sudo apt -y install lmod coreutils
         which which
-        if [ -d /etc/profile.d ]; then
-         for i in /etc/profile.d/*.sh; do
-         if [ -r $i ]; then
-           . $i
-         fi
-         done
-        fi
-        which module
-        module list
+        tree /etc/profile.d
