ci(lmod): lmod.sh

--- a/.github/workflows/lin-lmod.yml
+++ b/.github/workflows/lin-lmod.yml
@@ -13,3 +13,5 @@ jobs:
         sudo apt -y install lmod coreutils
         which which
         tree /etc/profile.d
+        . /etc/profile.d/lmod.sh
+        which module
